# convex

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PROGRESS.md  INDEX.md  LICENSE  OVERVIEW.md  README.md  fly.toml
crates/convex/: Cargo.toml
crates/convex-analytics/: Cargo.toml
crates/convex-analytics/benches/: hedge_advisor.rs  spread_pv_kernel.rs
crates/convex-analytics/examples/: readme_quickstart.rs  readme_zspread.rs
crates/convex-analytics/src/: dto.rs  error.rs  lib.rs  pricing.rs
crates/convex-analytics/src/calibration/: hw1f.rs  mod.rs
crates/convex-analytics/src/cashflows/: accrued.rs  generator.rs  irregular.rs  mod.rs  schedule.rs  settlement.rs
crates/convex-analytics/src/functions/: mod.rs
crates/convex-analytics/src/options/: binomial_tree.rs  mod.rs
crates/convex-analytics/src/pricing/: mod.rs
crates/convex-analytics/src/risk/: calculator.rs  dv01.rs  mod.rs  profile.rs
crates/convex-analytics/src/spreads/: benchmark.rs  discount_margin.rs  government_curve.rs  gspread.rs  ispread.rs  mod.rs  oas.rs  sovereign.rs  zspread.rs
crates/convex-analytics/src/yas/: analysis.rs  calculator.rs  invoice.rs  mod.rs
crates/convex-analytics/src/yields/: current.rs  engine.rs  mod.rs  money_market.rs  short_date.rs  simple.rs  solver.rs  street.rs  true_yield.rs
crates/convex-api/: Cargo.toml
crates/convex-api/src/: error.rs  lib.rs  main.rs  server.rs  state.rs
crates/convex-api/src/dto/: analytics.rs  bonds.rs  common.rs  curves.rs  mod.rs
crates/convex-api/src/routes/: analytics.rs  bonds.rs  curves.rs  health.rs  mod.rs
crates/convex-bonds/: Cargo.toml  README.md
crates/convex-bonds/benches/: trinomial_tree.rs
crates/convex-bonds/src/: arrc.rs  error.rs  fixings.rs  lib.rs
crates/convex-bonds/src/cashflows/: accrued.rs  irregular.rs  mod.rs  schedule.rs  settlement.rs
crates/convex-bonds/src/conventions/: eurobond.rs  german_bund.rs  japanese_jgb.rs  market.rs  mod.rs  registry.rs  uk_gilt.rs  us_corporate.rs  us_treasury.rs
crates/convex-bonds/src/curve_instruments/: conventions.rs  gov_coupon.rs  gov_zero.rs  mod.rs
crates/convex-bonds/src/indices/: conventions.rs  fixing_store.rs  mod.rs  overnight.rs
crates/convex-bonds/src/instruments/: callable.rs  (+7 more)
crates/convex-cli/: Cargo.toml
crates/convex-cli/src/: cli.rs  error.rs  main.rs  output.rs
crates/convex-config/: Cargo.toml
crates/convex-config/src/: curve.rs  error.rs  lib.rs  manager.rs  override_system.rs  pricing.rs
crates/convex-core/: Cargo.toml  README.md
crates/convex-core/src/: error.rs  ids.rs  lib.rs  validation_tests.rs
crates/convex-core/tests/: quantlib_validation.rs
crates/convex-curves/: Cargo.toml  README.md
crates/convex-curves/examples/: treasury_curve.rs
crates/convex-curves/src/: builder.rs  compat.rs  compounding.rs  conventions.rs  conversion.rs  error.rs  interpolation.rs  lib.rs  repricing.rs  term_structure.rs  traits.rs  validation.rs  value_type.rs
crates/convex-curves/tests/: treasury_curve_integration.rs
crates/convex-engine/: Cargo.toml
crates/convex-engine/benches/: pricing_benchmarks.rs
crates/convex-engine/src/: builder.rs  cache.rs  calc_graph.rs  config_resolver.rs  context.rs  curve_builder.rs  engine.rs  error.rs  etf_pricing.rs  graph.rs  lib.rs  market_data_listener.rs  nodes.rs  portfolio_analytics.rs  pricing_router.rs  reactive.rs  runtime.rs  scheduler.rs  services.rs  streaming.rs
crates/convex-ext-file/: Cargo.toml
crates/convex-ext-file/src/: lib.rs  market_data.rs  reference_data.rs
crates/convex-ext-json/: Cargo.toml
crates/convex-ext-json/src/: lib.rs
crates/convex-ext-redb/: Cargo.toml
crates/convex-ext-redb/src/: lib.rs
crates/convex-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/convex-ffi/src/: bonds.rs  build.rs  curves.rs  dispatch.rs  error.rs  lib.rs  pricing.rs  registry.rs  schemas.rs  spreads.rs
crates/convex-ffi/tests/: smoke.rs
crates/convex-math/: Cargo.toml  README.md
crates/convex-math/src/: error.rs  lib.rs
crates/convex-mcp/: Cargo.toml  README.md
crates/convex-mcp/docs/: integration-guide.md
crates/convex-mcp/src/: demo.rs  error.rs  lib.rs  main.rs  server.rs
crates/convex-mcp/tests/: smoke.rs
crates/convex-portfolio/: Cargo.toml  PLAN.md  REFACTOR_ANALYSIS.md
crates/convex-portfolio/src/: error.rs  lib.rs
crates/convex-portfolio/tests/: integration_tests.rs  property_tests.rs
crates/convex-ports/: Cargo.toml
crates/convex-ports/src/: config.rs  error.rs  lib.rs  market_data.rs  output.rs  reference_data.rs  storage.rs
crates/convex-py/: Cargo.toml  README.md  pyproject.toml
crates/convex-py/src/: error.rs  lib.rs
crates/convex-py/tests/: test_bonds.py
crates/convex-risk/: Cargo.toml  README.md
crates/convex-risk/src/: calculator.rs  dv01.rs  error.rs  lib.rs
crates/convex-server/: Cargo.toml
crates/convex-server/src/: config.rs  handlers.rs  lib.rs  main.rs  routes.rs  websocket.rs
crates/convex-server/tests/: api_integration_tests.rs  websocket_integration_tests.rs
crates/convex-spreads/: Cargo.toml  README.md
crates/convex-spreads/src/: benchmark.rs  discount_margin.rs  error.rs  government_curve.rs  gspread.rs  ispread.rs  lib.rs  oas.rs  sovereign.rs  zspread.rs
crates/convex-storage/: Cargo.toml
crates/convex-storage/src/: adapter.rs  error.rs  lib.rs  memory.rs  types.rs
crates/convex-traits/: Cargo.toml
crates/convex-traits/src/: config.rs  coordination.rs  error.rs  ids.rs  lib.rs  market_data.rs  output.rs  reference_data.rs  storage.rs  transport.rs
crates/convex-wasm/: Cargo.toml
crates/convex-wasm/src/: analyze.rs  bond.rs  conventions.rs  convert.rs  dto.rs  lib.rs  pricing.rs
crates/convex-yas/: Cargo.toml  README.md
crates/convex-yas/src/: calculator.rs  error.rs  formatting.rs  lib.rs  yas.rs
crates/convex/src/: lib.rs
tools/reconcile_bench/: Cargo.toml
tools/reconcile_bench/examples/: bondpricer_regression.rs  probe_30_360.rs  probe_5y.rs  probe_frn.rs
tools/reconcile_bench/src/: main.rs
(+501 files in other folders)
