# Convex - High-Performance Fixed Income Analytics Library
# Workspace configuration

[workspace]
members = [
    "crates/convex-core",
    "crates/convex-math",
    "crates/convex-curves",
    "crates/convex-bonds",
    "crates/convex-analytics",
    "crates/convex-portfolio",
    "crates/convex-ffi",
    "crates/convex-wasm",
    "crates/convex-mcp",
    # Pricing engine crates
    "crates/convex-traits",
    "crates/convex-engine",
    "crates/convex-ext-redb",
    "crates/convex-ext-file",
    "crates/convex-ext-json",
    "crates/convex-server",
]
# Note: convex-spreads has been absorbed into convex-analytics

resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2021"
rust-version = "1.75"
authors = ["Sujit Nair"]
license = "MIT"
repository = "https://github.com/sujitn/convex"
homepage = "https://github.com/sujitn/convex"
keywords = ["finance", "bonds", "fixed-income", "pricing", "quantitative"]
categories = ["finance", "mathematics", "science"]

[workspace.dependencies]
# Internal crates
convex-core = { path = "crates/convex-core", version = "0.11.0" }
convex-math = { path = "crates/convex-math", version = "0.11.0" }
convex-curves = { path = "crates/convex-curves", version = "0.11.0" }
convex-bonds = { path = "crates/convex-bonds", version = "0.11.0" }
convex-analytics = { path = "crates/convex-analytics", version = "0.11.0" }
convex-portfolio = { path = "crates/convex-portfolio", version = "0.11.0" }
convex-ffi = { path = "crates/convex-ffi", version = "0.11.0" }
convex-wasm = { path = "crates/convex-wasm", version = "0.11.0" }
# Pricing engine crates
convex-traits = { path = "crates/convex-traits", version = "0.11.0" }
convex-engine = { path = "crates/convex-engine", version = "0.11.0" }
convex-ext-redb = { path = "crates/convex-ext-redb", version = "0.11.0" }
convex-ext-file = { path = "crates/convex-ext-file", version = "0.11.0" }
convex-ext-json = { path = "crates/convex-ext-json", version = "0.11.0" }
convex-server = { path = "crates/convex-server", version = "0.11.0" }

# Core dependencies - shared across all crates
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.34", features = ["serde", "serde-float", "maths"] }
rust_decimal_macros = "1.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

# Mathematical dependencies
nalgebra = "0.34"
argmin = "0.9"
statrs = "0.17"
approx = "0.5"

# Performance dependencies
rayon = "1.10"
ndarray = { version = "0.17", features = ["rayon", "serde"] }

# Utility dependencies
uuid = { version = "1.19", features = ["serde", "v4"] }
log = "0.4"
once_cell = "1.19"

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-core = "0.3"
bytes = "1"

# Concurrent data structures
dashmap = "6"
parking_lot = "0.12"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage backends
redb = "2"

# File formats
csv = "1"
toml = "0.9"

# Web server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Development dependencies
criterion = "0.8"
proptest = "1.4"

# FFI dependencies
cbindgen = "0.29"
libc = "0.2"

[profile.dev]
opt-level = 1  # Basic optimizations for faster dev builds

[profile.test]
opt-level = 2  # Better performance in tests

[profile.release]
opt-level = 3
lto = "fat"          # Link-time optimization
codegen-units = 1    # Better optimization, slower compile
strip = true         # Strip symbols
panic = "abort"      # Smaller binary, faster panic

[profile.bench]
inherits = "release"
debug = true         # Include debug info for profiling

# CI profile - fast compilation, good-enough optimization
[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 4

# Distribution profile for binaries
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

# Workspace-level features
[workspace.metadata]
# This section can contain custom metadata for tools

# Cargo-deny configuration for dependency checking
[workspace.metadata.cargo-deny]
# See https://github.com/EmbarkStudios/cargo-deny for configuration

# Docs.rs configuration
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
