[package]
name = "convex-bonds"
description = "Bond pricing and analytics for the Convex fixed income analytics library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["finance", "fixed-income", "bonds", "pricing", "risk"]
categories = ["finance", "mathematics"]

[dependencies]
# Internal crates
convex-core = { workspace = true }
convex-math = { workspace = true }
convex-curves = { workspace = true }

# High-precision decimal arithmetic
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Utilities
uuid = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
parallel = []  # Enable parallel pricing

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
