[package]
name = "convex-cli"
description = "Command-line interface for the Convex fixed income analytics library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["finance", "fixed-income", "cli", "bonds", "analytics"]
categories = ["command-line-utilities", "finance"]

[[bin]]
name = "convex"
path = "src/main.rs"

[dependencies]
# Internal crates
convex-core = { workspace = true }
convex-curves = { workspace = true }
convex-bonds = { workspace = true }
convex-analytics = { workspace = true }
convex-config = { workspace = true }

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Output formatting
tabled = "0.17"
colored = "3.0"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Date/time
chrono = { workspace = true }

# Decimal arithmetic
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
csv = "1.3"
dirs = "5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
