[package]
name = "convex-core"
description = "Core types, traits, and abstractions for the Convex fixed income analytics library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["finance", "fixed-income", "bonds", "types"]
categories = ["finance", "data-structures"]

[dependencies]
# Date/time handling
chrono = { workspace = true }

# High-precision decimal arithmetic
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
log = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
simd = []  # Future SIMD optimizations

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
