[package]
name = "convex-curves"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["finance", "yield-curve", "term-structure", "fixed-income", "rates"]
categories = ["finance", "mathematics", "science"]
description = "Term structure framework for yield curves, credit curves, and multi-curve environments"

[dependencies]
# Internal crates
convex-core = { workspace = true }
convex-math = { workspace = true }

# Core dependencies
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Mathematical dependencies
nalgebra = { workspace = true }
argmin = { workspace = true }
approx = { workspace = true }

# Performance
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

# TODO: Add benchmarks later
# [[bench]]
# name = "curve_benchmarks"
# harness = false

[features]
default = []
parallel = []  # Enable parallel calibration
