[package]
name = "convex-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP (Model Context Protocol) server for Convex fixed income analytics"
keywords = ["mcp", "model-context-protocol", "finance", "bonds", "fixed-income"]
categories = ["finance", "mathematics", "api-bindings"]

[features]
default = ["stdio"]
stdio = ["rmcp/transport-io"]
http = ["rmcp/transport-streamable-http-server", "axum", "tower", "tower-http"]

[[bin]]
name = "convex-mcp-server"
path = "src/main.rs"

[dependencies]
# Internal crates
convex-core = { workspace = true }
convex-curves = { workspace = true }
convex-bonds = { workspace = true }
convex-analytics = { workspace = true }

# MCP SDK
rmcp = { version = "0.12", features = ["server", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"

# Math
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP transport (optional)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# CLI
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
