[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "convex"
version = "0.10.32"
description = "High-performance fixed income analytics library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Sujit Nair" }
]
keywords = ["finance", "bonds", "fixed-income", "pricing", "quantitative", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pandas>=1.3",
]

[project.urls]
Homepage = "https://github.com/sujitn/convex"
Repository = "https://github.com/sujitn/convex"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "convex._convex"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
