[package]
name = "convex-risk"
description = "Risk analytics for the Convex fixed income library - duration, convexity, DV01, VaR"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["finance", "risk", "duration", "convexity", "analytics"]
categories = ["finance", "mathematics"]

[dependencies]
# Internal crates
convex-core = { workspace = true }
convex-math = { workspace = true }
convex-bonds = { workspace = true }
convex-curves = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# High-precision decimal arithmetic
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Parallel processing
rayon = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = []
