[package]
name = "convex-spreads"
description = "Spread analytics for the Convex fixed income analytics library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["finance", "fixed-income", "spreads", "z-spread", "oas"]
categories = ["finance", "mathematics"]

[dependencies]
# Internal crates
convex-core = { workspace = true }
convex-bonds = { workspace = true }
convex-math = { workspace = true }
convex-curves = { workspace = true }
convex-pricing = { workspace = true }

# High-precision decimal arithmetic
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = []
parallel = []  # Enable parallel spread calculations

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
